| Summary: | ASTERISK-30350: res_pjsip_sdp_rtp: rtp_timeout_hold is not used when moh_passthrough has call on hold | ||
| Reporter: | Benjamin Keith Ford (bford) | Labels: | |
| Date Opened: | 2022-12-12 13:07:02.000-0600 | Date Closed: | 2022-12-20 09:38:01.000-0600 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_pjsip_sdp_rtp |
| Versions: | 20.0.1 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Hello,
we had a call that got an Invite with sdp sendonly and thus got set on hold. It seems like the `generic endpoints` rtp timeout (125 seconds) takes effect. We would expect the `rtp_timeout_hold` (900 seconds) should have been used. We're on Asterisk version 20.0.0. We attach the initial invite, the sdp sendonly invite as well as the log message for the timeout. If you need more logs please let us know. | ||
| Comments: | By: Friendly Automation (friendly-automation) 2022-12-20 09:38:02.433-0600 Change 19698 merged by George Joseph: res_pjsip_sdp_rtp.c: Use correct timeout when put on hold. [https://gerrit.asterisk.org/c/asterisk/+/19698|https://gerrit.asterisk.org/c/asterisk/+/19698] By: Friendly Automation (friendly-automation) 2022-12-20 09:38:12.864-0600 Change 19709 merged by George Joseph: res_pjsip_sdp_rtp.c: Use correct timeout when put on hold. [https://gerrit.asterisk.org/c/asterisk/+/19709|https://gerrit.asterisk.org/c/asterisk/+/19709] By: Friendly Automation (friendly-automation) 2022-12-20 09:38:16.788-0600 Change 19697 merged by George Joseph: res_pjsip_sdp_rtp.c: Use correct timeout when put on hold. [https://gerrit.asterisk.org/c/asterisk/+/19697|https://gerrit.asterisk.org/c/asterisk/+/19697] | ||